// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog should render a default component 1`] = `
<div
  className="dialog"
>
  <ContentContainer
    fill={true}
    footer={
      <div
        className="footer"
      >
        Footer Content
      </div>
    }
    header={
      <div
        className="header"
      >
        Header Content
      </div>
    }
  >
    <div
      className="body"
    >
      some body content
    </div>
  </ContentContainer>
</div>
`;

exports[`Dialog should render a header 1`] = `
<div
  className="dialog"
>
  <ContentContainer
    fill={true}
    footer={
      <div
        className="footer"
      />
    }
    header={
      <div
        className="header"
      >
        Header Content
      </div>
    }
  >
    <div
      className="body"
    >
      children required
    </div>
  </ContentContainer>
</div>
`;

exports[`Dialog should render header & footer 1`] = `
<div
  className="dialog"
>
  <ContentContainer
    fill={true}
    footer={
      <div
        className="footer"
      >
        Footer Content
      </div>
    }
    header={
      <div
        className="header"
      >
        Header Content
      </div>
    }
  >
    <div
      className="body"
    >
      children required
    </div>
  </ContentContainer>
</div>
`;
